# Vision2013

./: .gitignore  .project  CMakeLists.txt  Defines.h  HsvThreshold.h  HsvThresholdQt.h  MainWindow.h  Messaging.cxx  Mutex.cxx  PoleTargetMeasured.cxx  Process.cxx  Process.h  ProcessNoTarget.cxx  ProcessPoleTarget.h  README.markdown  RectTarget.cxx  Semaphore.cxx  Thread.h
Coprocessor/: CMakeCache.txt  CMakeLists.txt  ExampleManifest  ImageBufferManager.cxx  ImageBufferManager.h  ImageCapture.cxx  ImageCapture.h  ImageUtils.cxx  ImageUtils.h  Main.cxx  MainWindow.cxx  MainWindow.h  MainWindow.ui  Makefile  Messaging.h  Mutex.h  OptionsProcess.cxx  OptionsProcess.h  PoleTarget.cxx  PoleTarget.h  PoleTargetMeasured.cxx  PoleTargetMeasured.h  Process.cxx  Process.h  ProcessNoTarget.cxx  ProcessNoTarget.h  ProcessPoleTarget.cxx  ProcessPoleTarget.h  ProcessRectTarget.cxx  ProcessRectTarget.h  ProcessTargetBase.cxx  ProcessTargetBase.h  RectTarget.cxx  RectTarget.h  RectTargetMeasured.cxx  Semaphore.h  TimeUtils.cxx  Vision  Vision.cxx  Vision.cxx~  (+8 more)
Coprocessor/src/: .Messaging.cxx.swp  Arguments.cxx  Arguments.h  CMakeLists.txt  Doxyfile  Doxyfile2  ImageUtils.cxx  ImageUtils.h  Makefile  Messaging.cxx  Messaging.cxx~  Messaging.h  RectTarget.cxx~  RectTargetMeasured.cxx  RectTargetMeasured.cxx~  RectTargetMeasured.h  TimeUtils.cxx  TimeUtils.h  VisionNew2.cxx  VisionNew2.cxx~
